[package]
name = "polygon-brdige-new"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-web-socket-client = { tag = "0.1.0", git = "https://github.com/MyJetTools/my-web-socket-client" }
polygon-io-client = { git = "https://github.com/RomanSavh/polygon-io-client"}
rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }
my-logger = { tag = "0.2.0", git = "https://github.com/MyJetTools/my-logger.git" }

my-settings-reader = { tag = "0.1.5", git = "https://github.com/MyJetTools/my-settings-reader.git", features = [
    "background-reader",
] }

flurl = { tag = "0.2.3", git = "https://github.com/MyJetTools/fl-url.git" }
my-tcp-sockets = { tag = "0.1.7", git = "https://github.com/MyJetTools/my-tcp-sockets.git" }

serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["full"] }
async-trait = "*"
serde_yaml = "*"

chrono = "*"